<resources>
    <string name="app_name" translatable="false">GeoCulture</string>

    <string name="text_no_location">Location cannot be found</string>
    <string name="text_retry">RETRY</string>
    <string name="text_pick_location">PICK LOCATION</string>
    <string name="text_searching_locatin">Searching location...</string>
    <string name="text_your_location">Your Location :</string>
    <string name="text_explore">EXPLORE</string>
    <string name="text_selected_location">Selected Location :\u0020</string>
    <string name="text_last_searches">Last Searches</string>
    <string name="text_recent_places">Recent Places</string>
    <string name="content_desc_movie_image">Movie Image</string>
    <string name="text_genre">Genre :\u0020</string>
    <string name="text_cast">Cast :\u0020</string>
    <string name="text_director">Director :\u0020</string>
    <string name="text_writer">Writer :\u0020</string>
    <string name="text_synopsis">Synopsis</string>
    <string name="text_music">Music By :\u0020</string>
    <string name="text_lyrics_by">Lyrics By :\u0020</string>
    <string name="text_artists">Artists</string>
    <string name="toast_service_unavailable">Service currently unavailable</string>
    <string name="snackbar_no_location">Location not found yet.Please try again in a while.</string>
    <string name="text_results_for">results for</string>
    <string name="snackbar_went_wrong">Something went wrong. Please try again.</string>
    <string name="text_movies">MOVIES</string>
    <string name="text_songs">SONGS</string>
    <string name="text_not_available">Not Available</string>
    <string name="text_new_pick">NEW PICK</string>
    <string name="text_no_internet">No internet connection</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error_message">No internet connection found. Connect and try again</string>
    <string name="text_settings">Settings</string>
    <string name="gps_error_title">GPS Error</string>
    <string name="gps_error_message">GPS is not enabled. Enable GPS and try again.</string>
    <string name="text_full_info_button">View full info</string>
    <string name="snackbar_saved">Saved</string>
    <string name="snackbar_deleted_saved">Removed from Saved</string>
    <string name="text_deleted">deleted</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_key_animations" translatable="false">pref_key_animations</string>
    <string name="pref_label_animations">Animations</string>
    <string name="text_enabled">Enabled</string>
    <string name="text_disabled">Disabled</string>
    <string name="pref_label_evaluate">Evaluate App</string>
    <string name="pref_key_evaluate" translatable="false">pref_key_evaluate</string>
    <string name="pref_label_general">General</string>
    <string name="pref_key_about">pref_key_about</string>
    <string name="pref_label_about">About</string>
    <string name="text_dialog_version_info">Alpha Version 0.3.1</string>
    <string name="intro_title_location">Discover Content</string>
    <string name="intro_text_location">Discover cultural content near your current location or anywhere else</string>
    <string name="intro_title_movies">Movies</string>
    <string name="intro_text_movies">Check out all the movies that were filmed near you</string>
    <string name="intro_title_songs">Music</string>
    <string name="intro_text_songs">Find all the songs that refer to or are connected with your area</string>
    <string name="intro_title_local_save">Offline Copy</string>
    <string name="intro_text_local_save">Save the items that interest you the most for offline viewing</string>
    <string name="pref_key_show_tutorial" translatable="false">show_tutorial</string>
    <string name="pref_label_show_tutorial">Run Intro Again</string>
    <string name="pref_summary_tutorial">Start-up introduction is shown again</string>
    <string name="toast_text_tutorial">Intro will be run again</string>
    <string name="pref_label_version">Version Info</string>
    <string name="toast_location_permission">The application might not work properly until you grant the location  permission</string>
    <string name="text_mins">mins</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_place_search">PlaceSearchActivity</string>
    <string name="text_place_picker">Place Search</string>
    <string name="text_search">Searching</string>

</resources>
