<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_label_general">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_animations"
            android:title="@string/pref_label_animations" />

        <Preference
            android:key="@string/pref_key_evaluate"
            android:title="@string/pref_label_evaluate" >
            <intent android:action="android.intent.action.VIEW"
                android:data="@string/google_form_url" />
            </Preference>

        <Preference
            android:key="@string/pref_key_about"
            android:title="@string/pref_label_about" />

    </PreferenceCategory>

</PreferenceScreen>